--- a/docs/source/algorithms/moo/rvea.ipynb
+++ b/docs/source/algorithms/moo/rvea.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "raw",
    "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    },
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
@@ -11,21 +14,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# RVEA: Reference Vector Guided Evolutionary Algorithm"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The algorithm is implemented based on <cite data-cite=\"rvea\"></cite>. In RVEA, a scalarization approach, termed angle penalized distance (APD), is adopted to balance the convergence and diversity of the solutions in the high-dimensional objective space. Furthermore, an adaptation strategy is proposed to dynamically adjust the reference vectors' distribution according to the objective functions' scales. An illustration of the APD is shown below:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "<div style=\"text-align: center;\">\n",
     "    <img src=\"https://github.com/anyoptimization/pymoo-data/blob/main/docs/images/rvea_apd.png?raw=true\" width=\"350\">\n",
@@ -34,7 +49,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Example"
    ]
@@ -42,6 +61,9 @@
   {
    "cell_type": "raw",
    "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    },
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
@@ -60,6 +82,9 @@
      "iopub.status.busy": "2022-07-30T17:29:17.662283Z",
      "iopub.status.idle": "2022-07-30T17:29:20.876415Z",
      "shell.execute_reply": "2022-07-30T17:29:20.875689Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     },
     "tags": []
    },
@@ -84,14 +109,18 @@
     "               verbose=False)\n",
     "\n",
     "plot = Scatter()\n",
-    "plot.add(problem.pareto_front(ref_dirs), plot_type=\"line\", color=\"black\", alpha=0.7)\n",
+    "plot.add(problem.pareto_front(ref_dirs), plot_type=\"surface\", color=\"black\", alpha=0.7)\n",
     "plot.add(res.F, color=\"red\")\n",
     "plot.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### API"
    ]
@@ -99,6 +128,9 @@
   {
    "cell_type": "raw",
    "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    },
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
