--- a/docs/source/getting_started/part_3.ipynb
+++ b/docs/source/getting_started/part_3.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A common way is normalizing using the so-called ideal and nadir point. However, for the decision-making purpose here and the sake of generalization, we assume the ideal and nadir points (also referred to as boundary points) and the Pareto-front) are not known.\n",
+    "A common way is normalizing using the so-called ideal and nadir point. However, for the decision-making purpose here and the sake of generalization, we assume the ideal and nadir points (also referred to as boundary points) and the Pareto-front are not known.\n",
     "Thus the points can be approximated by:"
    ]
   },
@@ -221,7 +221,7 @@
    "source": [
     "Without going into too much detail in this getting started guide, one way for decision-making is using decomposition functions. They require the definition of weights that reflect the user's wishes. A vector gives the weights with only positive float numbers summing up to one and a length equal to the number of objectives.\n",
     "\n",
-    "Here for a bi-objective problem, let us assume the first objective is less a bit less important than the second objective by setting the weights to"
+    "Here for a bi-objective problem, let us assume the first objective is less important than the second objective by setting the weights to"
    ]
   },
   {
@@ -389,7 +389,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
