Fix #351 (OSY Equations did not consider normalization)

--- a/docs/source/problems/multi/osy.ipynb
+++ b/docs/source/problems/multi/osy.ipynb
@@ -40,12 +40,12 @@
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}\n",
-    "\\mbox{\\text{subject to}} & C_1(\\boldx) \\equiv x_1 + x_2 - 2 \\geq 0, \\\\\n",
-    "& C_2(\\boldx) \\equiv 6 - x_1 - x_2 \\geq 0, \\\\\n",
-    "& C_3(\\boldx) \\equiv 2 - x_2 + x_1 \\geq 0, \\\\\n",
-    "& C_4(\\boldx) \\equiv 2 - x_1 + 3x_2 \\geq 0, \\\\\n",
-    "& C_5(\\boldx) \\equiv 4 - (x_3-3)^2 - x_4 \\geq 0, \\\\\n",
-    "& C_6(\\boldx) \\equiv (x_5-3)^2 + x_6 - 4 \\geq 0, \\\\[2mm]\n",
+    "\\mbox{\\text{subject to}} & C_1(\\boldx) \\equiv (x_1 + x_2 - 2) / 2 \\geq 0, \\\\\n",
+    "& C_2(\\boldx) \\equiv (6 - x_1 - x_2) / 6 \\geq 0, \\\\\n",
+    "& C_3(\\boldx) \\equiv (2 - x_2 + x_1) / 2 \\geq 0, \\\\\n",
+    "& C_4(\\boldx) \\equiv (2 - x_1 + 3x_2) / 2 \\geq 0, \\\\\n",
+    "& C_5(\\boldx) \\equiv (4 - (x_3-3)^2 - x_4) / 4 \\geq 0, \\\\\n",
+    "& C_6(\\boldx) \\equiv ((x_5-3)^2 + x_6 - 4) / 4 \\geq 0, \\\\[2mm]\n",
     "& 0 \\leq x_1,x_2,x_6 \\leq 10,\\quad 1 \\leq x_3,x_5 \\leq 5,\\quad 0\\leq x_4 \\leq 6.\n",
     "\\end{array}\n",
     "\\end{equation}"
