DOCS survival rank and crowding

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -716,3 +716,46 @@ volume={35},
 number={2},
 pages={233-243},
 doi={10.1109/TSMCC.2004.841906}}
+
+
+@inproceedings{gde3,
+  title={GDE3: The third evolution step of generalized differential evolution},
+  author={Kukkonen, Saku and Lampinen, Jouni},
+  booktitle={2005 IEEE congress on evolutionary computation},
+  volume={1},
+  pages={443--450},
+  year={2005},
+  organization={IEEE}
+}
+
+
+@inproceedings{kukkonen2006improved,
+  title={Improved pruning of non-dominated solutions based on crowding distance for bi-objective optimization problems},
+  author={Kukkonen, Saku and Deb, Kalyanmoy},
+  booktitle={2006 IEEE International Conference on Evolutionary Computation},
+  pages={1179--1186},
+  year={2006},
+  organization={IEEE}
+}
+
+
+@incollection{kukkonen2006fast,
+  title={A fast and effective method for pruning of non-dominated solutions in many-objective problems},
+  author={Kukkonen, Saku and Deb, Kalyanmoy},
+  booktitle={Parallel problem solving from nature-PPSN IX},
+  pages={553--562},
+  year={2006},
+  publisher={Springer}
+}
+
+
+@article{wangmosade,
+  title={Multi-objective self-adaptive differential evolution with elitist archive and crowding entropy-based diversity measure},
+  author={Wang, Yao-Nan and Wu, Liang-Hong and Yuan, Xiao-Fang},
+  journal={Soft Computing},
+  volume={14},
+  number={3},
+  pages={193--209},
+  year={2010},
+  publisher={Springer}
+}
