DOCS Rank and Crowding

--- a/docs/source/operators/survival.ipynb
+++ b/docs/source/operators/survival.ipynb
@@ -34,10 +34,10 @@
     "Variants of the original algorithm have been proposed in the literature to address different performance aspects. Therefore the class ``RankAndCrowding`` from pymoo is a generalization of NSGA-II's survival in which several crowding metrics can be used. Some are already implemented and can be parsed as strings in the ``crowding_func`` argument, while others might be defined from scratch and parsed as callables. The ones available are:\n",
     "\n",
     "- **Crowding Distance** (*'cd'*): Proposed by Deb et al. <cite data-cite=\"nsga2\"></cite> in NSGA-II.\n",
-    "- **Pruning Crowding Distance** (*'pruning-cd'* or *'pcd'*): Proposed by Kukkonen & Deb <cite data-cite=\"kukkonen2006improved\"></cite>, it recursively recalculates crowding distances as removes individuals from a population to improve diversity.\n",
-    "- ***M*-Nearest Neighbors** (*'mnn'*): Proposed by Kukkonen & Deb <cite data-cite=\"kukkonen2006fast\"></cite> in an extension of GDE3 to many-objective problems.\n",
-    "- **2-Nearest Neighbors** (*'2nn'*): Also proposed by Kukkonen & Deb <cite data-cite=\"kukkonen2006fast\"></cite>, it is a variant of M-Nearest Neighbors in which the number of neighbors is two.\n",
-    "- **Crowding Entropy** (*'ce'*): Proposed by Wang et al. <cite data-cite=\"wangmosade\"></cite> it considers the relative position of a solution between its neighors.\n",
+    "- **Pruning Crowding Distance** (*'pruning-cd'* or *'pcd'*): Proposed by Kukkonen & Deb <cite data-cite=\"gde3pruning\"></cite>, it recursively recalculates crowding distances as removes individuals from a population to improve diversity.\n",
+    "- ***M*-Nearest Neighbors** (*'mnn'*): Proposed by Kukkonen & Deb <cite data-cite=\"gde3many\"></cite> in an extension of GDE3 to many-objective problems.\n",
+    "- **2-Nearest Neighbors** (*'2nn'*): Also proposed by Kukkonen & Deb <cite data-cite=\"gde3many\"></cite>, it is a variant of M-Nearest Neighbors in which the number of neighbors is two.\n",
+    "- **Crowding Entropy** (*'ce'*): Proposed by Wang et al. <cite data-cite=\"mosade\"></cite> it considers the relative position of a solution between its neighors.\n",
     "\n",
     "We encourage users to try ``crowding_func='pcd'`` for two-objective problems and ``crowding_func='mnn'`` for problems with more than two objectives.\n",
     "\n",
@@ -262,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
