--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -164,11 +164,6 @@ month={Aug},
 }
 
 
-
-
-
-
-
 @ARTICLE{moead,
 author = {Qingfu Zhang and Hui Li},
 title = {A multi-objective evolutionary algorithm based on decomposition},
@@ -729,7 +724,7 @@ doi={10.1109/TSMCC.2004.841906}}
 }
 
 
-@inproceedings{kukkonen2006improved,
+@inproceedings{gde3pruning,
   title={Improved pruning of non-dominated solutions based on crowding distance for bi-objective optimization problems},
   author={Kukkonen, Saku and Deb, Kalyanmoy},
   booktitle={2006 IEEE International Conference on Evolutionary Computation},
@@ -739,7 +734,7 @@ doi={10.1109/TSMCC.2004.841906}}
 }
 
 
-@incollection{kukkonen2006fast,
+@incollection{gde3many,
   title={A fast and effective method for pruning of non-dominated solutions in many-objective problems},
   author={Kukkonen, Saku and Deb, Kalyanmoy},
   booktitle={Parallel problem solving from nature-PPSN IX},
@@ -749,7 +744,7 @@ doi={10.1109/TSMCC.2004.841906}}
 }
 
 
-@article{wangmosade,
+@article{mosade,
   title={Multi-objective self-adaptive differential evolution with elitist archive and crowding entropy-based diversity measure},
   author={Wang, Yao-Nan and Wu, Liang-Hong and Yuan, Xiao-Fang},
   journal={Soft Computing},
