--- a/docs/source/problems/definition.ipynb
+++ b/docs/source/problems/definition.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "source": [
     "The majority of optimization algorithms implemented in *pymoo* are population-based, which means that more than one solution is evaluated in each generation. This is ideal for implementing a parallelization of function evaluations. Thus, the default definition of a problem retrieves a **set** of solutions to be evaluated. The actual function evaluation takes place in the `_evaluate` method, which aims to fill the `out` dictionary with the corresponding data. \n",
-    "The function values are supposed to be written into `out[\"F\"]` and the constraints into `out[\"G\"]` if `n_constr` is greater than zero. If another approach is used to compute the function values or the constraints, they must be appropriately converted into a two-dimensional `numpy` array (one dimension for the function values, the other dimension for each element of the population evaluated in the current round). "
+    "The function values are supposed to be written into `out[\"F\"]` and the constraints into `out[\"G\"]` if `n_constr` is greater than zero. If another approach is used to compute the function values or the constraints, they must be appropriately converted into a two-dimensional `numpy` array (one dimension for the function values, the other dimension for each element of the population evaluated in the current round). For example, if the function values are written in a regular python list like `F_list = [[<func values for individual 1>], [<func values for individual 2>], ...]`, "
    ]
   },
   {
