DOCS: DE algorithms

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -181,6 +181,65 @@ volume = {2007}
  address = {Berlin, Heidelberg},
 }
 
+@article{de_article,
+  title={Differential evolution--a simple and efficient heuristic for global optimization over continuous spaces},
+  author={Storn, Rainer and Price, Kenneth},
+  journal={Journal of global optimization},
+  volume={11},
+  number={4},
+  pages={341--359},
+  year={1997},
+  publisher={Springer}
+}
+
+
+@book{de_book,
+  title={Differential evolution: a practical approach to global optimization},
+  author={Price, Kenneth and Storn, Rainer M and Lampinen, Jouni A},
+  year={2005},
+  publisher={Springer Science \& Business Media}
+}
+
+@inproceedings{gde3,
+  title={GDE3: The third evolution step of generalized differential evolution},
+  author={Kukkonen, Saku and Lampinen, Jouni},
+  booktitle={2005 IEEE congress on evolutionary computation},
+  volume={1},
+  pages={443--450},
+  year={2005},
+  organization={IEEE}
+}
+
+
+@inproceedings{gde3pruning,
+  title={Improved pruning of non-dominated solutions based on crowding distance for bi-objective optimization problems},
+  author={Kukkonen, Saku and Deb, Kalyanmoy},
+  booktitle={2006 IEEE International Conference on Evolutionary Computation},
+  pages={1179--1186},
+  year={2006},
+  organization={IEEE}
+}
+
+
+@incollection{gde3many,
+  title={A fast and effective method for pruning of non-dominated solutions in many-objective problems},
+  author={Kukkonen, Saku and Deb, Kalyanmoy},
+  booktitle={Parallel problem solving from nature-PPSN IX},
+  pages={553--562},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{nsder,
+  title={Many-objective differential evolution optimization based on reference points: NSDE-R},
+  author={Reddy, Sohail R and Dulikravich, George S},
+  journal={Structural and Multidisciplinary Optimization},
+  volume={60},
+  number={4},
+  pages={1455--1473},
+  year={2019},
+  publisher={Springer}
+}
 
 @ARTICLE{unsga3,
 author={H. {Seada} and K. {Deb}},
