--- a/docs/source/algorithms/soo/de.ipynb
+++ b/docs/source/algorithms/soo/de.ipynb
@@ -10,11 +10,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     ".. meta::\n",
-    "   :description: Differential Evolution (DE) is a genetic algorithm that uses the differentials between individuals to create the offspring population. Through the usage of differential, the recombination is rotation-invariant and self-adaptive."
+    "   :description: Differential Evolution (DE) is an Evolutionary Algorithm (EA) originally designed for solving optimization problems over continuous domains. It has a simple implementation yet a great problem-solving quality, which makes it one of the most popular population-based algorithms, with several successful applications reported."
    ]
   },
   {
@@ -33,21 +34,44 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The classical single-objective\n",
-    "differential evolution algorithm <cite data-cite=\"de\"></cite> where different crossover variations\n",
-    "and methods can be defined. It is known for its good results for\n",
-    "global optimization.\n",
+    "Differential evolution <cite data-cite=\"de_article\"></cite> is an Evolutionary Algorithm (EA) originally designed for solving optimization problems over continuous domains. It has a simple implementation yet a great problem-solving quality, which makes it one of the most popular population-based algorithms, with several successful applications reported.\n",
     "\n",
-    "The differential evolution crossover is simply defined by:\n",
+    "From its original conception, DE was designed to fulfill some requirements that have made it particularly useful:\n",
+    "\n",
+    "- Ability to handle non-differentiable, nonlinear, and multimodal cost functions.\n",
+    "- Parallelizability to cope with computationally intensive cost functions.\n",
+    "- Ease of use: few control variables to steer the minimization. These variables should also be robust and easy to choose.\n",
+    "- Good convergence properties: consistent convergence to the global minimum in consecutive independent trials.\n",
+    "\n",
+    "Several DE variants have been proposed in the literature (including multi-objective variants). Most of them share some common operations when producing offsprings for the next generation. A detailed overview on DE mechanisms can be found at <cite data-cite=\"de_book\"></cite>.\n",
+    "\n",
+    "At each generation, $N$ new individuals (same as population size) are produced by operations originally defined as *mutation* and *crossover*. Notice the *mutation* in DE is conceptually different from the usual definition in genetic algorithms and in pymoo it is implemented as a *Crossover* operator.\n",
+    "\n",
+    "Several reproduction schemes have been proposed for DE. Usually, they are denoted DE/*x*/*y*/*z*, in which *x* corresponds to the mutation *parent selection* scheme, *y* to the number of difference vectors in *mutation*, and *z* to the *crossover* strategy.\n",
+    "\n",
+    "Probably the most popular mutation scheme is the DE/rand/1, represented by the equation below.\n",
     "\n",
     "$$\n",
-    "v = x_{\\pi_1} + F \\cdot (x_{\\pi_2} - x_{\\pi_3})\n",
+    "\\boldsymbol{v}_i=\\boldsymbol{x}_{r1}+F(\\boldsymbol{x}_{r2}-\\boldsymbol{x}_{r3})\n",
     "$$\n",
     "\n",
-    "where $\\pi$ is a random permutation with with 3 entries. The difference is taken between individual 2 and 3 and added to the first one. This is shown below:\n",
+    "In which, $v_i$ is the mutant vector of index $i$; and $r1$, $r2$, and $r3$ are mutually different indices and also different from $i$. The difference between individual $r2$ and $r3$ scaled by the $F$ parameter is added to $r1$.\n",
+    "\n",
+    "The *crossover* operation occurs between a given mutant vector and its corresponding parent of same index. The most usual is the binomial (bin) crossover, given by the equation below. Notice that it is mandatory that at least one attribute $j$ of $u$ is inherited from $v$.\n",
+    "\n",
+    "$$\n",
+    "u_{i, j}\n",
+    "\\begin{cases}\n",
+    " v_{i, j} & \\text{ if } \\text{ rand }(0, 1)_{i, j} < CR \\\\ \n",
+    " x_{i, j} & \\text{ if } \\text{ rand }(0, 1)_{i, j} \\geq CR \\; \\lor \\; j = j_{rand}\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "This creation of a new individual in the DE/rand/1/bin scheme is represented below:\n",
     "\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
@@ -55,29 +79,31 @@
     "</div>\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "Then, a second crossover between an individual and the so-called donor vector $v$ is performed. The second crossover can be simply binomial/uniform or exponential.\n",
-    "\n",
-    "\n",
-    "\n",
     "A great tutorial and more detailed information can be found [here](https://web.archive.org/web/20190928024126/http://www1.icsi.berkeley.edu/~storn/code.html). The following guideline is copied from the description there (variable names are modified):\n",
     "\n",
-    "If you are going to optimize your own objective function with DE, you may try the following classical settings for the input file first: Choose method e.g. DE/rand/1/bin, set the population size to 10 times the number of parameters, select weighting factor F=0.8, and crossover constant CR=0.9. \n",
-    "Recently, it has been found that selecting F from the interval (0.5, 1.0) randomly for each generation or each difference vector, a technique called dither, improves convergence behavior significantly, especially for noisy objective functions. \n",
+    "If you are going to optimize your own objective function with DE, you may try the following classical settings for the input file first: Choose method e.g. DE/rand/1/bin, set the population size $N$ to 10 times the number of parameters, select weighting factor `F=0.8`, and crossover constant `CR=0.9`. \n",
+    "Recently, it has been found that selecting $F$ from the interval (0.5, 1.0) randomly for each generation or each difference vector, a technique called dither, improves convergence behavior significantly, especially for noisy objective functions. \n",
     "\n",
+    "It has also been found that setting $CR$ to a low value, e.g., `CR=0.2` helps to optimize separable functions since it fosters the search along the coordinate axes. It can also be helpful to avoid premature convergence in some complex problems. On the contrary, this choice is not effective if parameter interdependence is encountered, which frequently occurs in real-world optimization problems rather than artificial test functions. So for parameter interdependence, the choice of $CR$ between 0.7 and 0.9 is likely to be more appropriate.\n",
     "\n",
-    "It has also been found that setting CR to a low value, e.g., `CR=0.2` helps to optimize separable functions since it fosters the search along the coordinate axes. On the contrary, this choice is not effective if parameter dependence is encountered, which frequently occurs in real-world optimization problems rather than artificial test functions. So for parameter dependence, the choice of `CR=0.9` is more appropriate. Another interesting empirical finding is that raising NP above, say, 40 does not substantially improve the convergence, independent of the number of parameters. It is worthwhile to experiment with these suggestions. Ensure that you initialize your parameter vectors by exploiting their full numerical range, i.e., if a parameter is allowed to exhibit values in the range (-100, 100), it is a good idea to pick the initial values from this range instead of unnecessarily restricting diversity.\n",
+    "Another interesting empirical finding is that raising $N$ above, say, 40 does not substantially improve the convergence, independent of the number of parameters. It is worthwhile to experiment with these suggestions. Ensure that you initialize your parameter vectors by exploiting their full numerical range, i.e., if a parameter is allowed to exhibit values in the range (-100, 100), it is a good idea to pick the initial values from this range instead of unnecessarily restricting diversity.\n",
     "\n",
-    "\n",
-    "Keep in mind that different problems often require different settings for NP, F, and CR (have a look into the different papers to get a feeling for the settings). If you still get misconvergence, you might want to try a different method. We mostly use 'DE/rand/1/...' or 'DE/best/1/...'. The crossover method is not so crucial, although Ken Price claims that binomial is never worse than exponential. In the case of misconvergence, also check your choice of objective function. There might be a better one to describe your problem. Any knowledge that you have about the problem should be worked into the objective function. A good objective function can make all the difference.\n",
+    "Keep in mind that different problems often require different settings for $N$, $F$, and $CR$ (have a look into the different papers to get a feeling for the settings). If you still get misconvergence, you might want to try a different method. We mostly use 'DE/rand/1/...' or 'DE/best/1/...'. The crossover method is not so crucial, although Ken Price claims that binomial is never worse than exponential. In the case of misconvergence, also check your choice of objective function. There might be a better one to describe your problem. Any knowledge that you have about the problem should be worked into the objective function. A good objective function can make all the difference.\n",
     "\n",
     "And this is how DE can be used:"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-08-01T02:42:32.165406Z",
@@ -87,28 +113,33 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best solution found: \n",
+      "X = [-3.61297079e-06  5.37106387e-06  3.75439568e-07  1.40458953e-05\n",
+      " -6.13940498e-06 -6.58679176e-06 -7.05695231e-06  3.46506072e-07\n",
+      "  8.72948210e-06 -6.40191628e-06]\n",
+      "F = [2.79315682e-05]\n"
+     ]
+    }
+   ],
    "source": [
     "from pymoo.algorithms.soo.nonconvex.de import DE\n",
     "from pymoo.problems import get_problem\n",
-    "from pymoo.operators.sampling.lhs import LHS\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "\n",
     "problem = get_problem(\"ackley\", n_var=10)\n",
     "\n",
     "\n",
-    "algorithm = DE(\n",
-    "    pop_size=100,\n",
-    "    sampling=LHS(),\n",
-    "    variant=\"DE/rand/1/bin\",\n",
-    "    CR=0.3,\n",
-    "    dither=\"vector\",\n",
-    "    jitter=False\n",
-    ")\n",
+    "algorithm = DE(pop_size=50, variant=\"DE/rand/1/bin\", CR=0.5, F=(0.3, 0.8))\n",
     "\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
+    "               (\"n_gen\", 300),\n",
     "               seed=1,\n",
     "               verbose=False)\n",
     "\n",
@@ -133,7 +164,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
