DOCS: DE with EP

--- a/docs/source/algorithms/hyperparameters.ipynb
+++ b/docs/source/algorithms/hyperparameters.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "from pymoo.algorithms.soo.nonconvex.de import DE\n",
+    "from pymoo.algorithms.soo.nonconvex.de_ep import EPDE\n",
     "from pymoo.core.parameters import get_params, flatten, set_params, hierarchical\n",
     "\n",
     "algorithm = DE()\n",
@@ -313,7 +313,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
