--- a/docs/source/algorithms/soo/de.ipynb
+++ b/docs/source/algorithms/soo/de.ipynb
@@ -75,14 +75,13 @@
     "\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"https://github.com/anyoptimization/pymoo-data/blob/main/docs/images/de_crossover.png?raw=true\" width=\"350\">\n",
+    "    <img src=\"https://github.com/anyoptimization/pymoo-data/blob/main/docs/images/de_mating.png?raw=true\" width=\"350\">\n",
     "</div>\n",
     "\n",
     "\n",
     "A great tutorial and more detailed information can be found [here](https://web.archive.org/web/20190928024126/http://www1.icsi.berkeley.edu/~storn/code.html). The following guideline is copied from the description there (variable names are modified):\n",
     "\n",
-    "If you are going to optimize your own objective function with DE, you may try the following classical settings for the input file first: Choose method e.g. DE/rand/1/bin, set the population size $N$ to 10 times the number of parameters, select weighting factor `F=0.8`, and crossover constant `CR=0.9`. \n",
-    "Recently, it has been found that selecting $F$ from the interval (0.5, 1.0) randomly for each generation or each difference vector, a technique called dither, improves convergence behavior significantly, especially for noisy objective functions. \n",
+    "If you are going to optimize your own objective function with DE, you may try the following classical settings for the input file first: Choose method e.g. DE/rand/1/bin, set the population size $N$ to 10 times the number of parameters, select weighting factor `F=0.8`, and crossover constant `CR=0.9`. Recently, it has been found that selecting $F$ from the interval (0.5, 1.0) randomly for each generation or each difference vector, a technique called dither, improves convergence behavior significantly, especially for noisy objective functions. \n",
     "\n",
     "It has also been found that setting $CR$ to a low value, e.g., `CR=0.2` helps to optimize separable functions since it fosters the search along the coordinate axes. It can also be helpful to avoid premature convergence in some complex problems. On the contrary, this choice is not effective if parameter interdependence is encountered, which frequently occurs in real-world optimization problems rather than artificial test functions. So for parameter interdependence, the choice of $CR$ between 0.7 and 0.9 is likely to be more appropriate.\n",
     "\n",
