DOCS rnc callable crowding func

--- a/docs/source/operators/survival.ipynb
+++ b/docs/source/operators/survival.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "We encourage users to try ``crowding_func='pcd'`` for two-objective problems and ``crowding_func='mnn'`` for problems with more than two objectives.\n",
     "\n",
-    "If callable, it has the form ``fun(F, filter_out_duplicates=None, n_remove=None, **kwargs)`` in which F (n, m) and must return metrics in a (n,) array.\n",
+    "If callable, it has the form ``fun(F, n_remove=None, **kwargs)`` in which F (n, m) and must return metrics in a (n,) array.\n",
     "\n",
     "The ``ConstrRankAndCrowding`` class has the constraint handling approach proposed by Kukkonen, S. & Lampinen, J. <cite data-cite=\"gde3\"></cite> implemented in which solutions are also sorted in constraint violations space."
    ]
