DOCS hyperparameter control DE

--- a/docs/source/algorithms/hyperparameters.ipynb
+++ b/docs/source/algorithms/hyperparameters.ipynb
@@ -69,7 +69,7 @@
     "from pymoo.algorithms.soo.nonconvex.de_ep import EPDE\n",
     "from pymoo.core.parameters import get_params, flatten, set_params, hierarchical\n",
     "\n",
-    "algorithm = DE()\n",
+    "algorithm = EPDE()\n",
     "flatten(get_params(algorithm))"
    ]
   },
