--- a/docs/source/customization/mixed.ipynb
+++ b/docs/source/customization/mixed.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
@@ -119,7 +119,6 @@
    "outputs": [],
    "source": [
     "from pymoo.algorithms.soo.nonconvex.optuna import Optuna\n",
-    "from pymoo.core.variable import Real, Integer\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = MixedVariableProblem()\n",
@@ -216,7 +215,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
