Getting Started Part I fix solution for constraint 2

--- a/docs/source/getting_started/part_1.ipynb
+++ b/docs/source/getting_started/part_1.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us analyze where the Pareto-optimal solutions have to lie. The first objective $f_1$ is minimized at $(0,0)$, whereas the second object $f_2$ at $(1, 0)$. Because both functions are of quadratic nature, the optimum is given by a straight line between the two optima. This means all Pareto-optimal solutions (ignoring the constraints for now) have in common that $x_2=0$ and $x_1 \\in (0,1)$. The first constraint only relies on $x_1$ and is satisfied if $x_1 \\in (0.1,0.9)$. The second constraint $g_2$ is satisfied for $x_1 \\in (0.4,0.6)$.\n",
+    "Let us analyze where the Pareto-optimal solutions have to lie. The first objective $f_1$ is minimized at $(0,0)$, whereas the second object $f_2$ at $(1, 0)$. Because both functions are of quadratic nature, the optimum is given by a straight line between the two optima. This means all Pareto-optimal solutions (ignoring the constraints for now) have in common that $x_2=0$ and $x_1 \\in (0,1)$. The first constraint only relies on $x_1$ and is satisfied if $x_1 \\in (0.1,0.9)$. The second constraint $g_2$ is satisfied for $x_1 \\in (-\\infty,0.4) \\lor x_1 \\in (0.6,\\infty)$.\n",
     "This means analytically, the pareto-optimal set is  given by $PS = \\{(x_1, x_2) \\,|\\, (0.1 \\leq x_1 \\leq 0.4) \\lor (0.6 \\leq x_1 \\leq 0.9) \\, \\land \\, x_2 = 0\\}$. "
    ]
   },
