--- a/docs/source/algorithms/moo/dnsga2.ipynb
+++ b/docs/source/algorithms/moo/dnsga2.ipynb
@@ -43,33 +43,18 @@
    "outputs": [],
    "source": [
     "from pymoo.algorithms.moo.dnsga2 import DNSGA2\n",
-    "from pymoo.core.callback import CallbackCollection, Callback\n",
+    "from pymoo.core.callback import CallbackCollection\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.problems.dyn import TimeSimulation\n",
     "from pymoo.problems.dynamic.df import DF1\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from pymoo.visualization.video.callback_video import ObjectiveSpaceAnimation\n",
     "\n",
     "problem = DF1(taut=2, n_var=2)\n",
     "\n",
-    "algorithm = DNSGA2()\n",
+    "algorithm = DNSGA2(version=\"A\")\n",
     "\n",
     "simulation = TimeSimulation()\n",
-    "\n",
-    "\n",
-    "class ObjectiveSpaceAnimation(Callback):\n",
-    "\n",
-    "    def _update(self, algorithm):\n",
-    "        \n",
-    "        if algorithm.n_gen % 20 == 0:\n",
-    "            F = algorithm.opt.get(\"F\")\n",
-    "            pf = algorithm.problem.pareto_front()\n",
-    "\n",
-    "            plt.clf()\n",
-    "            plt.scatter(F[:, 0], F[:, 1])\n",
-    "            if pf is not None:\n",
-    "                plt.plot(pf[:, 0], pf[:, 1], color=\"black\", alpha=0.7)\n",
-    "\n",
-    "            plt.show()\n",
     "\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
@@ -80,7 +65,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
