AttributeError: 'Result' object has no attribute 'time' #507

--- a/docs/source/interface/result.ipynb
+++ b/docs/source/interface/result.ipynb
@@ -61,7 +61,7 @@
     "- `res.opt`: The solutions as a `Population` object.\n",
     "- `res.pop`: The final Population\n",
     "- `res.history`: The history of the algorithm. (only if `save_history` has been enabled during the algorithm initialization)\n",
-    "- `res.time`: The time required to run the algorithm\n"
+    "- `res.exec_time`: The time required to run the algorithm\n"
    ]
   },
   {
