Add Incremental method to reference_directions.ipynb

--- a/docs/source/misc/reference_directions.ipynb
+++ b/docs/source/misc/reference_directions.ipynb
@@ -357,6 +357,32 @@
     "ref_dirs = get_reference_directions(\"layer-energy\", 3, [9, 5, 2, 1])\n",
     "Scatter().add(ref_dirs).show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Incremental method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Incremental method can be used to create reference directions in increments. \n",
+    "However, the method relies on a partition number `n_partitions` which determines how many points will be sampled.\n",
+    "Points can be uniformly create on the unit hyperplane using the Incremental method proposed in <cite data-cite=\"incremental_Lattice\"></cite>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_dirs = get_reference_directions(\"incremental\", 3, n_partitions=8)\n",
+    "Scatter().add(ref_dirs).show()"
+   ]
   }
  ],
  "metadata": {
